After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728503 - Crashes when changing "Icon Captions" combo boxes
Crashes when changing "Icon Captions" combo boxes
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Preferences
3.12.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-18 13:56 UTC by António Fernandes
Modified: 2014-09-14 22:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix crash when changing icon captions settings (1.30 KB, patch)
2014-04-19 19:10 UTC, Volker Sobek (weld)
committed Details | Review

Description António Fernandes 2014-04-18 13:56:55 UTC
Steps to reproduce:

     1) Open "Preferences" window.
     2) Go to "Display" tab.
     3) Change the value of any combo boxes.

Expected result:

     Preference is changed.

Actual result:

     Nautilus crashes. Preference was not changed.

(gdb) thread apply all bt

Thread 1 (Thread 0x7ffff7fb2a40 (LWP 29985))

  • #0 icon_captions_changed_callback
    at nautilus-file-management-properties.c line 267
  • #1 g_closure_invoke
    from /lib64/libgobject-2.0.so.0
  • #2 signal_emit_unlocked_R
    from /lib64/libgobject-2.0.so.0
  • #3 g_signal_emit_valist
    from /lib64/libgobject-2.0.so.0
  • #4 g_signal_emit
    from /lib64/libgobject-2.0.so.0
  • #5 gtk_combo_box_set_active_internal
    at gtkcombobox.c line 4398
  • #6 gtk_combo_box_set_active_iter
    at gtkcombobox.c line 4456
  • #7 gtk_combo_box_menu_activate
    at gtkcombobox.c line 3294
  • #8 g_cclosure_marshal_VOID__STRINGv
    from /lib64/libgobject-2.0.so.0
  • #9 _g_closure_invoke_va
    from /lib64/libgobject-2.0.so.0
  • #10 g_signal_emit_valist
  • #11 g_signal_emit
    from /lib64/libgobject-2.0.so.0
  • #12 item_activated_cb
    at gtktreemenu.c line 1492
  • #13 g_closure_invoke
    from /lib64/libgobject-2.0.so.0
  • #14 signal_emit_unlocked_R
    from /lib64/libgobject-2.0.so.0
  • #15 g_signal_emit_valist
    from /lib64/libgobject-2.0.so.0
  • #16 g_signal_emit
    from /lib64/libgobject-2.0.so.0
  • #17 gtk_widget_activate
    at gtkwidget.c line 7259
  • #18 gtk_menu_shell_activate_item
    at gtkmenushell.c line 1378
  • #19 gtk_menu_shell_button_release
    at gtkmenushell.c line 792
  • #20 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #21 _g_closure_invoke_va
    from /lib64/libgobject-2.0.so.0
  • #22 g_signal_emit_valist
    from /lib64/libgobject-2.0.so.0
  • #23 g_signal_emit
    from /lib64/libgobject-2.0.so.0
  • #24 gtk_widget_event_internal
    at gtkwidget.c line 7228
  • #25 gtk_widget_event
    at gtkwidget.c line 6890
  • #26 propagate_event_up
    at gtkmain.c line 2406
  • #27 propagate_event
    at gtkmain.c line 2514
  • #28 gtk_main_do_event
    at gtkmain.c line 1735
  • #29 gdk_event_source_dispatch
    at gdkeventsource.c line 364
  • #30 g_main_context_dispatch
    from /lib64/libglib-2.0.so.0
  • #31 g_main_context_iterate.isra.24
    from /lib64/libglib-2.0.so.0
  • #32 g_main_context_iteration
    from /lib64/libglib-2.0.so.0
  • #33 g_application_run
    from /lib64/libgio-2.0.so.0
  • #34 main
    at nautilus-main.c line 103

(I did not find this bug myself, it was reported on IRC by user "Jorky".)
Comment 1 Volker Sobek (weld) 2014-04-19 19:10:07 UTC
Created attachment 274737 [details] [review]
Fix crash when changing icon captions settings

Don't SIGSEGV when changing any of the three combo boxes in the
preferences' Display tab. This issue existed since commit d8a8ab3.
Comment 2 Volker Sobek (weld) 2014-04-19 19:11:58 UTC
Comment on attachment 274737 [details] [review]
Fix crash when changing icon captions settings

Not sure this is the most elegant solution; maybe it should be done in a "response" signal handler like it was before?
Comment 3 Andrea Antolini 2014-04-24 17:34:14 UTC
I can reproduced this bug also on a Archlinux 64bit with Nautilus 3.12.0 (Gnome 3.12.1)

Files close/crash always when you try to change value for comboBoxes present in Display / Icon Caption

Regards
Andrea
Comment 4 Cosimo Cecchi 2014-09-14 22:56:48 UTC
Attachment 274737 [details] pushed as fc2daed - Fix crash when changing icon captions settings

Thanks for the patch, I pushed this to git master.