Fix crash when changing icon captions settings

Don't SIGSEGV when changing any of the three combo boxes in the
preferences' Display tab. This issue existed since commit d8a8ab3.

https://bugzilla.gnome.org/show_bug.cgi?id=728503